--- a/examples/empty_project.html
+++ b/examples/empty_project.html
@@ -50,7 +50,7 @@
         /*
             2. DEFINING THE RULES. Below, the user defines the nextState function. This function will be applied for each grid point when we will update the grid later. 
         */
-        sim.model.nextState = function (i, j) {
+        sim.model.nextState = function (x, y) {
             // Empty
         }
 
